RESOLVED FIXED283957
[IFC][Float] Overflowing (and suspended) float may trigger ASSERT when other (shape-outside) floats are present
https://bugs.webkit.org/show_bug.cgi?id=283957
Summary [IFC][Float] Overflowing (and suspended) float may trigger ASSERT when other ...
alan
Reported 2024-12-02 19:44:17 PST
Attachments
[fast-cq]Patch (3.86 KB, patch)
2024-12-02 19:53 PST, alan
no flags
alan
Comment 1 2024-12-02 19:53:27 PST
Created attachment 473436 [details] [fast-cq]Patch
EWS
Comment 2 2024-12-03 05:12:12 PST
Committed 287275@main (b489a0bd3269): <https://commits.webkit.org/287275@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473436 [details].
Note You need to log in before you can comment on or make changes to this bug.