[IFC][Float] Overflowing (and suspended) float may trigger ASSERT when other (shape-outside) floats are present https://bugs.webkit.org/show_bug.cgi?id=283957 <rdar://136249639>

Reviewed by Antti Koivisto.

1. If a float does not fit the current line we suspend float layout and continue with inline content only,
until after we run out of available space.
2. When starting on the subsequent line, we look at the suspended float list and try to fit them first.
3. Due to (already placed) intrusive floats on this new line position, we may not be able to place any of these suspended floats.

In such cases we should give a hint what the next line's top position should be.

* LayoutTests/fast/block/float/float-with-shape-and-overflowing-assert-expected.txt: Added.
* LayoutTests/fast/block/float/float-with-shape-and-overflowing-assert.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineAndFloatContent):

Canonical link: https://commits.webkit.org/287275@main